[package]
name = "web_sample"
version = "0.1.0"
authors = ["Vuraddo <vuraddo@yahoo.com>"]

[dependencies]
iron = "0.6"
time = "0.1"
slog = "2.4"
slog-term = "2.4"
slog-json = "2.2"
bodyparser = "0.8.0"
persistent = "0.4.0"
serde = "1.0.80"
serde_json = "1.0.33"
serde_derive = "1.0.80"
iron-json-response = "0.6.0"

[dependencies.diesel]
version = "1.3"
features = ["r2d2", "postgres"]
dotenv = "0.1"
