[package]
name = "web_sample"
version = "0.1.0"
authors = ["Vuraddo <vuraddo@yahoo.com>"]

[dependencies]
iron = "0.6"
time = "0.1"
slog = "2.4"
slog-term = "2.4"
slog-json = "2.2"
bodyparser = "0.8"
persistent = "0.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
iron-json-response = "0.6"
validator = "0.8"
validator_derive = "0.8"

[dependencies.diesel]
version = "1.3"
features = ["r2d2", "postgres"]
dotenv = "0.1"
